--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,6 +3,7 @@
   <head>
     <title>IntegrationsApp</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta name="turbo-visit-control" content="reload">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <%= stylesheet_link_tag "tailwind", "inter-font", "data-turbo-track": "reload" %>
@@ -12,6 +13,28 @@
   </head>
 
   <body>
+<div class="antialiased bg-white dark:bg-gray-800">
+  <header>
+    <nav
+      class="bg-blue-600 border-gray-200 px-4 py-6 dark:bg-blue-800">
+      <div class="flex justify-between items-center">
+        <div class="flex justify-start items-center">
+          <a href="https://flowbite.com" class="flex mr-6">
+            <img
+            src="https://flowbite.s3.amazonaws.com/logo.svg"
+            class="mr-3 h-8"
+            alt="Flowbite Logo"
+            />
+            <span
+              class="self-center text-white text-2xl font-semibold whitespace-nowrap dark:text-gray-50">SSO Integrations</span>
+          </a>
+        </div>
+        <div class="flex justify-between items-center text-sm space-x-4 lg:order-2">
+          <%= render "devise/shared/user_options" %>
+        </div>
+      </div>
+    </nav>
+  </header>
     <main class="container mx-auto mt-28 px-5 flex">
       <%= yield %>
     </main>
