SSO Client and Authorization Models

--- a/app/views/devise/shared/_user_options.html.erb
+++ b/app/views/devise/shared/_user_options.html.erb
@@ -33,6 +33,7 @@
             >
               <li><%= link_to "My Profile", edit_user_registration_path, class: "block py-2 px-4 text-sm hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-400 dark:hover:text-white"%>
               </li>
+              <% if current_user.admin? %>
               <li>
                 <a
                   href="#"
@@ -40,6 +41,7 @@
                   >Account settings</a
                 >
               </li>
+              <% end %>
             </ul>
             <ul
               class="py-1 text-gray-700 dark:text-gray-300"
