--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
       class="bg-blue-600 border-gray-200 px-4 py-6 dark:bg-blue-800">
       <div class="flex justify-between items-center">
         <div class="flex justify-start items-center">
-          <a href="https://flowbite.com" class="flex mr-6">
+          <a href="/" class="flex mr-6">
             <img
             src="https://flowbite.s3.amazonaws.com/logo.svg"
             class="mr-3 h-8"
