--- a/app/views/layouts/devise.erb
+++ b/app/views/layouts/devise.erb
@@ -19,7 +19,7 @@
               SSO Integrations    
           </a>
           <div class="w-full bg-white rounded-lg shadow md:mt-0 sm:max-w-md xl:p-0 dark:bg-gray-800">
-              <div class="p-6 space-y-4 md:space-y-6 lg:space-y-8 sm:p-8">
+              <div class="p-6 space-y-4  sm:p-8">
               <%= yield %>
               </div>
           </div>
