--- a/app/views/devise/shared/_user_options.html.erb
+++ b/app/views/devise/shared/_user_options.html.erb
@@ -35,11 +35,7 @@
               </li>
               <% if current_user.admin? %>
               <li>
-                <a
-                  href="#"
-                  class="block py-2 px-4 text-sm hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-400 dark:hover:text-white"
-                  >Account settings</a
-                >
+                <%= link_to "SSO Clients", sso_clients_path, class: "block py-2 px-4 text-sm hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-400 dark:hover:text-white"%>
               </li>
               <% end %>
             </ul>
