--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,7 +36,9 @@
     </nav>
   </header>
     <main class="container mx-auto mt-28 px-5 flex">
+      <div class= "flex flex-col mx-auto w-full">
       <%= yield %>
+      </div>
     </main>
   </body>
 </html>
