--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,7 @@
 <div>
-  <h1 class="font-bold text-4xl">Home#index</h1>
-  <p>Find me in app/views/home/index.html.erb</p>
-
+  <h1 class="font-bold text-4xl">Welcome <%= current_user.first_name%></h1>
+  <p>You've logged in with email: <%= current_user.email%> 
+  <% if current_user.provider %>
+    <p>using <%= current_user.provider%></p>
+  <% end %>
 </div>
