--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,6 +2,6 @@
   <h1 class="font-bold text-4xl">Welcome <%= current_user.first_name%></h1>
   <p>You've logged in with email: <%= current_user.email%> 
   <% if current_user.provider %>
-    <p>using <%= current_user.provider%></p>
+    <p>using <%= current_user.provider.present? ? current_user.provider : "e-mail and password"%></p>
   <% end %>
 </div>
